syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.cartservice.grpc";

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CartItemRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CartItemResponse {
  string product_id = 1;
  int32 quantity = 2;
}

service CartItemService {
  rpc getCartItem (CartItemRequest) returns (CartItemResponse) {}
}
