syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.catalogservice.grpc";

import "google/protobuf/timestamp.proto";

service CategoryService {
  rpc getCategoryById (CategoryRequest) returns (CategoryResponse) {}
}

message CategoryRequest {
  string categoryId = 1;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  string slug = 3;
  string description = 4;
  string image = 5;
  string parentId = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
  string status = 9;
}

//enum CategoryStatus {
//  ACTIVE = 0;
//  INACTIVE = 1;
//}
